# taskscore-backend

./: .env  .gitignore  Cargo.toml  Rocket.toml
container/: .env.local  .env.remote  build_image.sh  build_images.sh  create_network.sh  docker-compose.yml  pull_images.sh  rebuild_and_run.sh  remove_container.sh  remove_containers.sh  remove_image.sh  remove_images.sh  remove_network.sh  run_container.sh  run_containers.sh  start_containers.sh  stop_container.sh  stop_containers.sh  up_local.sh  up_remote.sh
container/app/: Dockerfile
container/neo4j/: 01_create.cypher  02_data.cypher  Dockerfile  apoc.conf  init.sh
container/nginx/: nginx.conf  nginx.conf.local  nginx.conf.remote
container/taskscore/: Dockerfile
doc/: TaskScore Backend v 0.1.odp  bash_history_old  taskscore-soapui-project.xml  todo_next.txt  todos and ideas.txt
doc/Neo4J_Project/: Neo4J DB create.cypher  Neo4J DB data.cypher  Statements.cypher  docker commands  relate.project.json
service/: deploy.sh  taskscore.service
src/: main.rs  model.rs  repository.rs
src/logic/: logic.rs
src/model/: entity.rs  http.rs  mod.rs  model.rs  session.rs  task.rs  user.rs  util.rs
src/repository/: client.rs  legacy_repository.rs  mod.rs  neo4j_repsitory.rs  relation_repository.rs  repository.rs  session_repository.rs  task_repository.rs  team_repository.rs  user_repository.rs
src/resource/: config_resource.rs  mod.rs  response.rs  score_resource.rs  session_resource.rs  task_resource.rs  user_resource.rs
src/resource/http/: mod.rs  okapi.rs  responder.rs
