[package]
name = "TaskScore"
version = "0.1.0"
authors = ["Frank Langner <frank.langner@posteo.de>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"          # Random number generation
bcrypt = "0.10.1"       # Password hash generation
serde_json = "1.0"      # JSON (de-)serialization
serde = {version ="1.0", features = ["derive", "rc"]}   # general (de-) serialzation
async-trait = "0.1.50"  # Asynchronous programming
chrono = { version = "0.4", features = ["serde"] }  # Timestamp (de-)serialization
dotenv = "0.15.0"       # Environment configuration handling
bolt-client = "0.10.1"  # Neo4J connection
tokio-util = {version = "0.7.0", features = ["compat"]}  # Utility features fort tokio async

[dev-dependencies]
lazy_static = "1.4.0"   # Lazy global value initialization

[dependencies.rocket]   # Web framework
tag = "v0.5.0-rc.1"
git = "https://github.com/SergioBenitez/Rocket"
features = ["json"]
