[package]
name = "TaskScore"
version = "0.1.1"
authors = ["Frank Langner <frank.langner@posteo.de>"]
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rand = "0.8.4"          # Random number generation
bcrypt = "0.13.0"       # Password hash generation
serde_json = "1.0"      # JSON (de-)serialization
serde = {version ="1.0", features = ["derive", "rc"]}   # general (de-) serialzation
async-trait = "0.1.52"  # Temorarily neccessary to create async trait functions
chrono = { version = "0.4", features = ["serde"] }  # Timestamp (de-)serialization
dotenv = "0.15.0"       # Environment configuration handling
bolt-client = "0.10.1"  # Neo4J connection
tokio-util = {version = "0.7.0", features = ["compat"]}  # Utility features fort tokio async
futures = "0.3.25"
base64 = "0.13.1"

# Rocket-Dependencies
rocket-basicauth = "2.1.1"
#rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", branch = "master", features = ["swagger"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }

# Dependencies for okapi
schemars = {version = "0.8.10", features = ["chrono"]}
#okapi = { version = "0.7.0-rc.1" }
okapi = { git = "https://github.com/GREsau/okapi", branch = "master"}

[dev-dependencies]
lazy_static = "1.4.0"   # Lazy global value initialization
